unpackaged/main/default/objects/DA_Product__c/DA_Product__c.object-meta.xml
<CustomObject>
    <label>DA Product</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>DA Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DA Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>