unpackaged/main/default/objects/DA_Product__c/fields/Disaster_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Agreement__c</fullName>
    <label>Disaster Contract</label>
    <referenceTo>Disaster_Agreement__c</referenceTo>
    <relationshipLabel>DA Products</relationshipLabel>
    <relationshipName>DA_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>