unpackaged/main/default/objects/DA_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Product is not a Disaster product.</errorMessage>
        <filterItems>
            <field>Product2.Transaction_Category__c</field>
            <operation>equals</operation>
            <value>Disaster</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>DA Products</relationshipLabel>
    <relationshipName>DA_Products</relationshipName>
    <type>Lookup</type>
</CustomField>